@@ -6,6 +6,8 @@ Release 17.09.1 (pending)
 - Fixed WriteStream() end of burst flushing in fifo.h
 - Fixed abs() overload compiler issue in lms7_device.cpp
 - Removed private include in mcu_program/host_src/main.cpp
+- Fixed error checking bug causing compilation error on MacOS in LMS_GetGaindB() and LMS_GetNormalizedGain() 
+- LimeSDR v1.4 updated to r2.10 gateware
 
 Release 17.09.0 (2017-09-01)
 ==========================
